--- a/INDEX.HTML.html
+++ b/INDEX.HTML.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To the Power of Math!</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            color: #2c3e50;
+        }
+        .content {
+            margin-top: 20px;
+        }
+        footer {
+            margin-top: 30px;
+            font-size: 0.8em;
+            color: #777;
+        }
+    </style>
 </head>
 
 <body>
-    To the Power of Math!
+    <h1>To the Power of Math!</h1>
+    <div class="content">
+        <p>Explore the wonders of mathematics through various topics!</p>
+        <ul>
+            <li>Algebra</li>
+            <li>Geometry</li>
+            <li>Calculus</li>
+            <li>Statistics</li>
+            <li>Number Theory</li>
+        </ul>
+    </div>
+    <footer>
+        &copy; 2024 Math Enthusiasts
+    </footer>
 </body>
 </html>
